# GIS-project

./: README.md  archives.html  authors.html  categories.html  gqis2web-test.html  index.html  my-first-review.html  pelicanconf.py  publishconf.py  pyproject.toml  qgis2web-test.html  tags.html
.github/workflows/: static.yml
author/: valentina-cabrales.html
category/: maps.html  review.html
content/: keyboard.md
content/maps/chicago_neighborhoods/layers/: Neighborhoods_Chicago_1.js  layers.js
content/maps/chicago_neighborhoods/styles/: Neighborhoods_Chicago_1_style.js
content/posts/: keyboard.md
feeds/: all.atom.xml  maps.atom.xml  review.atom.xml
maps/chicago_neighborhoods/: index.html
maps/chicago_neighborhoods/resources/: qgis2web.js
output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
output/author/: valentina-cabrales.html
output/category/: review.html
output/feeds/: all.atom.xml  review.atom.xml
