[tool.poetry]
name = "gis-project"
version = "0.1.0"
description = ""
authors = ["valentinacabrales <valentinacabrales23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pelican = {extras = ["markdown"], version = "^4.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
